# impl-serde

./: Cargo.toml  README.md  ]
src/: expanded.rs  lib.rs  macros.rs  main.rs
src/deser-macros/: Cargo.toml
src/deser-macros/src/: lib.rs
src/proc-macros/: Cargo.toml
src/proc-macros/src/: lib.rs
src/ser-macros/: Cargo.toml
src/ser-macros/src/: lib.rs
